Fix Header  - invisible cart and user login

--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@ body
     color: white;
     border-radius: 50%;
     padding: 5px 8px;
-    font-size: 14px;
+    font-size: 11px;
     top: 10px;
     right:158px;
     display: flex;
@@ -65,7 +65,7 @@ body
 .search
 {
     padding: 14px;
-    /* color: gray; */
+    color: gray;
     color: rgb(29, 29, 29);
     min-width: 25px;
     text-align: center;
@@ -76,15 +76,15 @@ body
 {
     font-size: 1.5em;
     margin-right: 25px;
-    /* position: relative; */
-    /* width: 50px; */
-    /* height: 70px; */
+    position: relative;
+    width: 50px;
+    height: 70px;
     /* background-color: rgba(0, 120, 255, 0.2); Biru transparan */
-    /* border-radius: 8px; */
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* cursor: pointer; */
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 
@@ -93,7 +93,8 @@ body
     display: flex;
     float: right;
     align-items: center;
-    /* gap: 24px; ✅ Jarak antar ikon */
+    /* Jarak antar ikon */
+    gap: 24px; 
 }
 
 .userIcon
